# dapla-smoketests

./: .cruft.json  README.md  pyproject.toml
notebooks/: README.md
notebooks/manual/: long-running-process.ipynb  spark-k8s-env-kernel.ipynb  spark-local-env-kernel.ipynb
notebooks/smoke-tests/R/: README.md  common-libraries.ipynb  dapla-arrow.ipynb  expected-packages.txt  sparkR-local.ipynb
notebooks/smoke-tests/python/: common-imports.ipynb  dapla-python.ipynb  pyspark-k8s.ipynb  pyspark-local.ipynb
src/functions/: fizzbuzz.py
src/notebooks/: 00_imports.ipynb
