[tool.poetry]
name = "dapla-smoketests"
version = "0.1.0"
description = "Notebook repo for smoke tests running on Dapla"
authors = ["Statistics Norway <stat-dev@ssb.no>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/statisticsnorway/dapla-smoketests"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.27.1"
dapla-toolbelt = ">=1.3.6"
pyarrow = "10.0.0"
faker = "^15.3.4"
pyspark = "3.2.1"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = ">=3.4.5"
ipykernel = ">=6.13.0"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
pytest-mock = "*"
ipython = "*"
poethepoet = "*"
nbval = "*"

[tool.poe.tasks]
smoke-test = "pytest -vvvv --cache-clear --nbval notebooks/smoke-tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
pytest11 = { nbval = "nbval.plugin" }

